--- a/src/components/StatsBar/StatsBar.css
+++ b/src/components/StatsBar/StatsBar.css
@@ -6,5 +6,14 @@
     margin: auto;
     text-align:center;
     position: absolute;
-    font-weight: bold;
+}
+
+.StatsBarContainer > .StatsBarText {
+	font-weight: bold;	
+}
+
+@media only screen and (max-width: 600px) {
+  .StatsBarContainer {  
+    display: none;
+  }
 }
